# xontrib-jupyter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: issue_template.md
.github/workflows/: release.yml  test.yml
tests/: conftest.py  test_display_llm.py  test_interrupt_llm.py  test_jupyter_kernel.py  test_widgets_llm.py  test_xonfig.py
tests/fake_lib/jupyter_client/: kernelspec.py
xonsh_jupyter/: alias.py  kernel.py  shell.py
xonsh_jupyter/resources/: __init__.py  kernel.json
xontrib/: jupyter.py
