[project]
name = "xontrib-jupyter"
dynamic = ["version"]
description = "Xonsh kernel for Jupyter Notebook and Jupyter Lab allows to execute xonsh shell commands in a notebook cell"
authors = [{ name = "Xonsh Dev", email = "jnoortheen@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "xontrib",
    "xonsh",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Jupyter",
]
dependencies = [
    "xonsh>=0.19",
    "ipykernel>=6.29",
    "jupyter-client>=8",
]

[project.urls]
Repository = "https://github.com/xonsh/xontrib-jupyter"
Documentation = "https://github.com/xonsh/xontrib-jupyter/blob/main/README.md"
Code = "https://github.com/xonsh/xontrib-jupyter"
"Issue tracker" = "https://github.com/xonsh/xontrib-jupyter/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-timeout>=2.1",
    "mypy>=1.0",
    "jupyter_kernel_test>=0.7",
    # Integration tests under tests/test_display.py and tests/test_widgets.py
    # exercise the rich-display path; pandas and ipywidgets are imported with
    # pytest.importorskip so the suite still passes if they're absent, but CI
    # installs them to actually run those assertions.
    "ipywidgets>=8.0",
    "pandas>=2.0",
    "psutil>=5.9",
]

[tool.hatch.build.targets.sdist]
include = [
    "xontrib",
    "xonsh_jupyter",
]

[tool.hatch.build.targets.wheel]
include = [
    "xontrib",
    "xonsh_jupyter",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff specific rules
]
